<resources>
    <string name="app_name">Movie Catalog</string>
    <string name="show_all_activity_title">Movies &amp; TV Shows</string>
    <string name="all_label">All</string>
    <string name="now_playing_label">Now Playing</string>
    <string name="upcoming_label">Upcoming</string>
    <string name="tv_show_label">TV Show</string>
    <string name="error_get_data">Something wrong when accessing data</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="tv_shows_label">TV Shows</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reviews_text">Reviews</string>
    <string name="search">Search</string>
    <string name="search_hint">Type movie title...</string>
    <string name="share">Share</string>
    <string name="key_upcoming_reminder">upcoming_reminder</string>
    <string name="key_daily_reminder">key_daily_reminder</string>
    <string name="label_alarm_daily_reminder">Hallo guys! See the movie info today</string>
    <string name="action_notification">Notification</string>
    <string name="action_setting">Setting</string>
    <string name="key_setting_locale">setting_locale</string>
    <string name="label_setting_locale_summary">Change device language</string>
    <string name="label_setting_locale_title">Change language</string>
    <string name="action_setting_language">Language</string>
    <string name="daily_reminder_summary">Turn on / off movie daily reminder</string>
    <string name="upcoming_reminder_summary">Turn on / off notification when movie was released</string>
    <string name="daily_reminder_title">Daily reminder</string>
    <string name="upcoming_reminder_title">Upcoming reminder</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="succes_msg">Success</string>
    <string name="running_msg">Running</string>
    <string name="failed_msg">Something went wrong</string>
    <string name="eol_msg">You have reached the end</string>
    <string name="label_release_reminder">Today %s is release, watch it on your favorites Cinema</string>
    <string name="tv_fav_label">Favourite</string>
    <string name="msg_add_to_fav">Movie has been added to your favourite list</string>
    <string name="msg_del_from_fav">Movie has been deleted from your favourite list</string>

</resources>
