<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bottom_nav_now"
        android:icon="@drawable/ic_access_time"
        android:title="@string/now_playing_label"
        app:showAsAction="always" />
    <item
        android:id="@+id/bottom_nav_upcoming"
        android:icon="@drawable/ic_timer"
        android:title="@string/upcoming_label"
        app:showAsAction="always" />
    <item
        android:id="@+id/bottom_nav_tvs"
        android:icon="@drawable/ic_live_tv"
        android:title="@string/tv_shows_label"
        app:showAsAction="always" />
    <item
        android:id="@+id/bottom_nav_fav"
        android:icon="@drawable/ic_favorite_border"
        android:title="@string/tv_fav_label"
        app:showAsAction="always" />
</menu>